--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@number-flow/react": "^0.5.9",
     "@tanstack/react-virtual": "^3.13.4",
     "@telegram-apps/analytics": "^1.4.0",
+    "@telegram-apps/bridge": "^2.11.0",
     "@telegram-apps/sdk": "^3.5.3",
-    "@telegram-apps/sdk-react": "^2.0.20",
+    "@telegram-apps/sdk-react": "^2.0.25",
     "@telegram-apps/telegram-ui": "^2.1.9",
     "@tonconnect/ui-react": "^2.0.5",
     "@twa-dev/sdk": "^8.0.2",
