--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.12.11",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.2.0",
@@ -52,6 +53,7 @@
     "typescript-eslint": "^7.8.0",
     "vite": "^5.2.11",
     "vite-plugin-mkcert": "^1.17.6",
+    "vite-plugin-svgr": "^4.5.0",
     "vite-tsconfig-paths": "^4.3.2"
   }
 }
