--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-  "engines": { "node": ">=18.18 <23" },
   "packageManager": "pnpm@9.0.0",
+  "engines": {
+    "node": ">=20.10.0"
+  },
   "homepage": "https://telegram-mini-apps.github.io/reactjs-template",
   "scripts": {
     "deploy": "gh-pages -d dist",
@@ -24,6 +26,7 @@
     "@telegram-apps/sdk": "^3.11.8",
     "@telegram-apps/sdk-react": "^2.0.25",
     "@telegram-apps/telegram-ui": "^2.1.9",
+    "@telegram-apps/toolkit": "^2.1.3",
     "@tma.js/bridge": "^2.0.3",
     "@tonconnect/ui-react": "^2.0.5",
     "@twa-dev/sdk": "^8.0.2",
