--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-  "packageManager": "pnpm@9.0.0",
-  "engines": {
-    "node": ">=20.10.0"
-  },
+  "packageManager": "pnpm@8.15.8",
+  "engines": { "node": ">=20 <21" },
   "homepage": "https://telegram-mini-apps.github.io/reactjs-template",
   "scripts": {
     "deploy": "gh-pages -d dist",
