--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://Gifth.io",
-  "name": "Gifth",
-  "iconUrl": "https://i.ibb.co/xtPzpbxg/gifth-logo.png"
+  "url": "https://Stars Base.io",
+  "name": "Stars Base",
+  "iconUrl": "https://i.ibb.co/zWf4pNbY/stars-stake.png"
 }
