--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "framer-motion": "^12.23.24",
     "lottie-web": "^5.13.0",
     "pako": "^2.1.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
