--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "https://StarsBase.io",
   "name": "Stars Base",
-  "iconUrl": "https://i.ibb.co/zWf4pNbY/stars-stake.png"
+  "iconUrl": "https://i.ibb.co/Ps4YzTHZ/stars-base.png"
 }
