--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@telegram-apps/telegram-ui": "^2.1.9",
     "@telegram-apps/toolkit": "^2.1.3",
     "@tma.js/bridge": "^2.0.3",
+    "@tma.js/sdk": "^3.1.2",
+    "@tma.js/sdk-react": "^3.0.11",
     "@tonconnect/ui-react": "^2.0.5",
     "@twa-dev/sdk": "^8.0.2",
     "classnames": "^2.5.1",
